--- a/src/App.css
+++ b/src/App.css
@@ -221,7 +221,7 @@ body {
     margin-left: 4.15vw;
     margin-right: 4.15vw;
     min-width: 195px;
-    max-width: 70%;
+    max-width: 90%;
   }
 }
 
@@ -233,7 +233,7 @@ body {
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
-    margin-bottom: 20vh;
+    margin-bottom: 15vh;
   }
   .about-me .left .img {
     width: 25vw;
@@ -242,18 +242,32 @@ body {
     overflow: hidden;
   }
 
+  .about-me .left h1 {
+    font-size: 4rem;
+  }
+
   .about-me .left h2 {
     margin-top: 4.5vw;
-    margin-bottom: 1rem;
-    font-size: 1.5rem;
+    margin-bottom: 0.2rem;
+    font-size: 2.1rem;
     font-family: 'Redressed';
   }
 
+  .about-me .left h3 {
+    margin-top: 0vw;
+  }
+
+  .about-me .right {
+    min-width: 90%;
+    max-width: 50%;
+  }
+
   .about-me .right p {
-    font-size: 1rem;
+    width : 100%;
+    font-size: 1.6rem;
     display: block;
     text-align: justify;
-    margin: 1vh 2vw;
+    margin: 0;
     text-indent: 10%;
     font-family: 'Alegreya Sans';
     text-justify: auto;
