--- a/src/Home/Card.css
+++ b/src/Home/Card.css
@@ -44,7 +44,7 @@
     width: 40%;
     max-height: 27.5%;
     font-size: 1.4rem;
-    word-spacing: 0.1rem;
+    line-height: 0.01rem;
     background-color: #FF4B4B;
     border: none;
     border-radius: 50px;
@@ -84,6 +84,23 @@
     .card .title {
         margin-bottom: ;
         margin-bottom: 1.25rem;
+    }
+
+    .card button {
+        width: 40%;
+        min-height: 20%;
+        max-height: 27.5%;
+        font-size: 1.4rem;
+        word-spacing: 0.1rem;
+        background-color: #FF4B4B;
+        border: none;
+        border-radius: 50px;
+        box-shadow: 0rem 0.5rem 0px 1px rgba(0,0,0,0.60);
+        color: white;
+        outline: none;
+        font-family: "Kanit";
+        height: 9vh;
+        line-height: 1.6rem;
     }
 
 }
