--- a/src/Home/Skill.css
+++ b/src/Home/Skill.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Fredoka+One&family=Lobster&display=swap');
 
 .skill {
-    min-width: 20vw;
+    min-width: 300px;
     min-height: 45vh;
     display : flex;
     flex-direction: column;
@@ -11,7 +11,7 @@
     margin-bottom: 1rem;
     border-radius: 15px;
     background : #17142D;
-    box-shadow : -2.5rem 0.3rem 3rem #000;
+    box-shadow : -1.75rem 0.3rem 3rem #000;
     transition : .2s;
     overflow-y: visible;
     border-left: 1.5px white solid;
@@ -30,7 +30,7 @@
     margin-bottom: 3.75rem;
     font-family: "Fredoka One";
     letter-spacing: 0.15rem;
-    font-size: 4rem;
+    font-size: 3.75rem;
 }
 
 .skill .container {
@@ -80,4 +80,41 @@
     stroke: yellowgreen;
     stroke-width : 6;
     stroke-linecap: round;
+}
+
+@media screen and (max-width: 500px) {
+
+    
+    .skill {
+        min-width: 250px;
+        min-height: 45vh;
+        display : flex;
+        flex-direction: column;
+        align-items: flex-start;
+        padding-left: 4rem;
+        position: relative;
+        margin-bottom: 1rem;
+        border-radius: 15px;
+        background : #17142D;
+        box-shadow : -2.5rem 0.3rem 3rem #000;
+        transition : .2s;
+        overflow-y: visible;
+        border-left: 1.5px white solid;
+    }
+
+    .skill:not(:first-child) {
+        margin-left: -16vw;
+    }
+
+    .skill:hover~.skill{
+        transform : translateX(20vw);
+    }
+    
+    .skill header h1 {
+        margin-top: 0.2rem;
+        margin-bottom: 3.75rem;
+        font-family: "Fredoka One";
+        letter-spacing: 0.15rem;
+        font-size: 3.25rem;
+    }
 }
